# autonomous-agent-framework

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: ModelSelection.md  ROADMAP.md  setup.md  usage_guide.md
docs/api/: core.md  tools.md
examples/: README.md  demo_agent.py
src/autonomous_agent_framework/: __init__.py
src/autonomous_agent_framework/core/: __init__.py  agent.py  credentials.py  learning.py  security.py
src/autonomous_agent_framework/tools/: __init__.py  discovery.py
tests/: test_credentials.py  test_integration.py  test_learning.py  test_security.py  test_tool_discovery.py
